[workspace]

members = [
    "medic-step-git",
    "medic-step-github",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.1.8" }
indoc = "2.0.1"
medic-lib = "0.1"
regex = "1.7"

[workspace.package]
authors = ["Eric Saxby <sax@livinginthepast.org>", "synchonal.dev"]
description = "Medic extension pack for git"
edition = "2021"
homepage = "https://github.com/synchronal"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/synchronal/medic-ext-git"
version = "0.2.2"
